samples/_failures_safe/1761554934_adc8c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a355702.c: In function ‘free_graph’:
./samples/SAFE/__tmp_1a355702.c:182:9: error: expected declaration or statement at end of input
  182 |         free(graph->nodes);
      |         ^~~~
./samples/SAFE/__tmp_1a355702.c:182:9: error: expected declaration or statement at end of input
